--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .opener {
     position: fixed;
-    right: 0;
-    bottom: 0;
+    right: 20px;
+    bottom: 20px;
 }
 
 .tc-launcher-open-icon {
@@ -40,4 +40,25 @@
 .tc-ask-form {
     display: flex;
     flex-direction: column;
+}
+
+/* jquery ui */
+.ui-widget.ui-widget-content {
+    background: transparent;
+    border: 0;
+}
+
+.ui-dialog .ui-dialog-content {
+    background-color: #f9fafa !important;
+    border-radius: 4px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    height: 100vh;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    min-height: 200px;
+    width: 100%;
+    border: 0;
 }
